# modular

./: .ctags  LICENSE  README.rst  git_init.py  pyproject.toml
src/photon_platform/modulator/templates/: __init__.py.j2
src/photonplatform/modular/: __main__.py  add_class.py  add_function.py  create_module.py
